--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
     </main>
 
     <footer class="rodape">
-        <p>Estilizado por professor-rafael</p>
+        <p>Estilizado por Heloise Anders</p>
     </footer>
 </body>
 
