--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <img src="github.png">
                     Github
                 </a>
-                <a class="apresentacao__links__link" href="https://www.linkedin.com/in/rafael-assis-santos-3384b220a/">
+                <a class="apresentacao__links__link" href="https://github.com/Heloisevikc/potfolio_heloise">
                     <img src="linkedin.png">
                     linkedin
                 </a>
@@ -66,10 +66,10 @@
                 </a>
             </div>
         </section>
-        <img src="ras.png" height="50%" width="50%" alt="Foto do professor-rafael programando">
+        <img src="unnamed.jpg" height="50%" width="50%" alt="Foto do Heloise Anders programando">
     </main>
     <footer class="rodape">
-        <p>Estilizado por professor-rafael</p>
+        <p>Estilizado por Heloise Anders</p>
     </footer>
 </body>
 
