--- a/index.html
+++ b/index.html
@@ -52,14 +52,11 @@
             colocarem em prática boas ideias.</p>
             <div class="apresentacao__links">
                 <h2 class="apresentacao__links__subtitulo">Contatos</h2>
-                <a class="apresentacao__links__link" href="https://github.com/professor-rafael">
+                <a class="apresentacao__links__link" href="hhttps://github.com/Heloisevikc/potfolio_heloise">
                     <img src="github.png">
                     Github
                 </a>
-                <a class="apresentacao__links__link" href="https://github.com/Heloisevikc/potfolio_heloise">
-                    <img src="linkedin.png">
-                    linkedin
-                </a>
+               
                 <a class="apresentacao__links__link" href="https://chatgpt.com/">
                     <img src="ia.png" height="10%" width="9%">
                     Chat GPT
