--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     ::-webkit-scrollbar-track 
     {
-        background: green;
+        background: green;https://github.com/Heloisevikc
     }
 
     ::-webkit-scrollbar-thumb 
@@ -52,7 +52,7 @@
             colocarem em prática boas ideias.</p>
             <div class="apresentacao__links">
                 <h2 class="apresentacao__links__subtitulo">Contatos</h2>
-                <a class="apresentacao__links__link" href="hhttps://github.com/Heloisevikc/potfolio_heloise">
+                <a class="apresentacao__links__link" href="https://github.com/Heloisevikc">
                     <img src="github.png">
                     Github
                 </a>
